MGMT-1793 Swagger generate for ignition customization
