# restapi/configure_assisted_install.go
@@ -76,6 +76,9 @@ type InstallerAPI interface {
 	/* GetCluster Retrieves the details of the OpenShift bare metal cluster. */
 	GetCluster(ctx context.Context, params installer.GetClusterParams) middleware.Responder
 
+	/* GetClusterIgnitionConfig Get the cluster ignition config */
+	GetClusterIgnitionConfig(ctx context.Context, params installer.GetClusterIgnitionConfigParams) middleware.Responder
+
 	/* GetClusterInstallConfig Get the cluster install config yaml */
 	GetClusterInstallConfig(ctx context.Context, params installer.GetClusterInstallConfigParams) middleware.Responder
 
@@ -120,6 +123,9 @@ type InstallerAPI interface {
 
 	/* UpdateCluster Updates an OpenShift bare metal cluster definition. */
 	UpdateCluster(ctx context.Context, params installer.UpdateClusterParams) middleware.Responder
+
+	/* UpdateClusterIgnitionConfig Override values in the initial ignition config */
+	UpdateClusterIgnitionConfig(ctx context.Context, params installer.UpdateClusterIgnitionConfigParams) middleware.Responder
 
 	/* UpdateClusterInstallConfig Override values in the install config */
 	UpdateClusterInstallConfig(ctx context.Context, params installer.UpdateClusterInstallConfigParams) middleware.Responder
@@ -292,6 +298,11 @@ func HandlerAPI(c Config) (http.Handler, *operations.AssistedInstallAPI, error) 
 		ctx = storeAuth(ctx, principal)
 		return c.InstallerAPI.GetCluster(ctx, params)
 	})
+	api.InstallerGetClusterIgnitionConfigHandler = installer.GetClusterIgnitionConfigHandlerFunc(func(params installer.GetClusterIgnitionConfigParams, principal interface{}) middleware.Responder {
+		ctx := params.HTTPRequest.Context()
+		ctx = storeAuth(ctx, principal)
+		return c.InstallerAPI.GetClusterIgnitionConfig(ctx, params)
+	})
 	api.InstallerGetClusterInstallConfigHandler = installer.GetClusterInstallConfigHandlerFunc(func(params installer.GetClusterInstallConfigParams, principal interface{}) middleware.Responder {
 		ctx := params.HTTPRequest.Context()
 		ctx = storeAuth(ctx, principal)
@@ -381,6 +392,11 @@ func HandlerAPI(c Config) (http.Handler, *operations.AssistedInstallAPI, error) 
 		ctx := params.HTTPRequest.Context()
 		ctx = storeAuth(ctx, principal)
 		return c.InstallerAPI.UpdateCluster(ctx, params)
+	})
+	api.InstallerUpdateClusterIgnitionConfigHandler = installer.UpdateClusterIgnitionConfigHandlerFunc(func(params installer.UpdateClusterIgnitionConfigParams, principal interface{}) middleware.Responder {
+		ctx := params.HTTPRequest.Context()
+		ctx = storeAuth(ctx, principal)
+		return c.InstallerAPI.UpdateClusterIgnitionConfig(ctx, params)
 	})
 	api.InstallerUpdateClusterInstallConfigHandler = installer.UpdateClusterInstallConfigHandlerFunc(func(params installer.UpdateClusterInstallConfigParams, principal interface{}) middleware.Responder {
 		ctx := params.HTTPRequest.Context()
