# restapi/operations/installer/update_cluster_ignition_config_responses.go
@@ -1,0 +1,302 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package installer
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/openshift/assisted-service/models"
+)
+
+// UpdateClusterIgnitionConfigCreatedCode is the HTTP code returned for type UpdateClusterIgnitionConfigCreated
+const UpdateClusterIgnitionConfigCreatedCode int = 201
+
+/*UpdateClusterIgnitionConfigCreated Success.
+
+swagger:response updateClusterIgnitionConfigCreated
+*/
+type UpdateClusterIgnitionConfigCreated struct {
+}
+
+// NewUpdateClusterIgnitionConfigCreated creates UpdateClusterIgnitionConfigCreated with default headers values
+func NewUpdateClusterIgnitionConfigCreated() *UpdateClusterIgnitionConfigCreated {
+
+	return &UpdateClusterIgnitionConfigCreated{}
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(201)
+}
+
+// UpdateClusterIgnitionConfigBadRequestCode is the HTTP code returned for type UpdateClusterIgnitionConfigBadRequest
+const UpdateClusterIgnitionConfigBadRequestCode int = 400
+
+/*UpdateClusterIgnitionConfigBadRequest Error.
+
+swagger:response updateClusterIgnitionConfigBadRequest
+*/
+type UpdateClusterIgnitionConfigBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewUpdateClusterIgnitionConfigBadRequest creates UpdateClusterIgnitionConfigBadRequest with default headers values
+func NewUpdateClusterIgnitionConfigBadRequest() *UpdateClusterIgnitionConfigBadRequest {
+
+	return &UpdateClusterIgnitionConfigBadRequest{}
+}
+
+// WithPayload adds the payload to the update cluster ignition config bad request response
+func (o *UpdateClusterIgnitionConfigBadRequest) WithPayload(payload *models.Error) *UpdateClusterIgnitionConfigBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update cluster ignition config bad request response
+func (o *UpdateClusterIgnitionConfigBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateClusterIgnitionConfigUnauthorizedCode is the HTTP code returned for type UpdateClusterIgnitionConfigUnauthorized
+const UpdateClusterIgnitionConfigUnauthorizedCode int = 401
+
+/*UpdateClusterIgnitionConfigUnauthorized Unauthorized.
+
+swagger:response updateClusterIgnitionConfigUnauthorized
+*/
+type UpdateClusterIgnitionConfigUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.InfraError `json:"body,omitempty"`
+}
+
+// NewUpdateClusterIgnitionConfigUnauthorized creates UpdateClusterIgnitionConfigUnauthorized with default headers values
+func NewUpdateClusterIgnitionConfigUnauthorized() *UpdateClusterIgnitionConfigUnauthorized {
+
+	return &UpdateClusterIgnitionConfigUnauthorized{}
+}
+
+// WithPayload adds the payload to the update cluster ignition config unauthorized response
+func (o *UpdateClusterIgnitionConfigUnauthorized) WithPayload(payload *models.InfraError) *UpdateClusterIgnitionConfigUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update cluster ignition config unauthorized response
+func (o *UpdateClusterIgnitionConfigUnauthorized) SetPayload(payload *models.InfraError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateClusterIgnitionConfigForbiddenCode is the HTTP code returned for type UpdateClusterIgnitionConfigForbidden
+const UpdateClusterIgnitionConfigForbiddenCode int = 403
+
+/*UpdateClusterIgnitionConfigForbidden Forbidden.
+
+swagger:response updateClusterIgnitionConfigForbidden
+*/
+type UpdateClusterIgnitionConfigForbidden struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.InfraError `json:"body,omitempty"`
+}
+
+// NewUpdateClusterIgnitionConfigForbidden creates UpdateClusterIgnitionConfigForbidden with default headers values
+func NewUpdateClusterIgnitionConfigForbidden() *UpdateClusterIgnitionConfigForbidden {
+
+	return &UpdateClusterIgnitionConfigForbidden{}
+}
+
+// WithPayload adds the payload to the update cluster ignition config forbidden response
+func (o *UpdateClusterIgnitionConfigForbidden) WithPayload(payload *models.InfraError) *UpdateClusterIgnitionConfigForbidden {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update cluster ignition config forbidden response
+func (o *UpdateClusterIgnitionConfigForbidden) SetPayload(payload *models.InfraError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigForbidden) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(403)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateClusterIgnitionConfigNotFoundCode is the HTTP code returned for type UpdateClusterIgnitionConfigNotFound
+const UpdateClusterIgnitionConfigNotFoundCode int = 404
+
+/*UpdateClusterIgnitionConfigNotFound Error.
+
+swagger:response updateClusterIgnitionConfigNotFound
+*/
+type UpdateClusterIgnitionConfigNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewUpdateClusterIgnitionConfigNotFound creates UpdateClusterIgnitionConfigNotFound with default headers values
+func NewUpdateClusterIgnitionConfigNotFound() *UpdateClusterIgnitionConfigNotFound {
+
+	return &UpdateClusterIgnitionConfigNotFound{}
+}
+
+// WithPayload adds the payload to the update cluster ignition config not found response
+func (o *UpdateClusterIgnitionConfigNotFound) WithPayload(payload *models.Error) *UpdateClusterIgnitionConfigNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update cluster ignition config not found response
+func (o *UpdateClusterIgnitionConfigNotFound) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateClusterIgnitionConfigMethodNotAllowedCode is the HTTP code returned for type UpdateClusterIgnitionConfigMethodNotAllowed
+const UpdateClusterIgnitionConfigMethodNotAllowedCode int = 405
+
+/*UpdateClusterIgnitionConfigMethodNotAllowed Method Not Allowed.
+
+swagger:response updateClusterIgnitionConfigMethodNotAllowed
+*/
+type UpdateClusterIgnitionConfigMethodNotAllowed struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewUpdateClusterIgnitionConfigMethodNotAllowed creates UpdateClusterIgnitionConfigMethodNotAllowed with default headers values
+func NewUpdateClusterIgnitionConfigMethodNotAllowed() *UpdateClusterIgnitionConfigMethodNotAllowed {
+
+	return &UpdateClusterIgnitionConfigMethodNotAllowed{}
+}
+
+// WithPayload adds the payload to the update cluster ignition config method not allowed response
+func (o *UpdateClusterIgnitionConfigMethodNotAllowed) WithPayload(payload *models.Error) *UpdateClusterIgnitionConfigMethodNotAllowed {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update cluster ignition config method not allowed response
+func (o *UpdateClusterIgnitionConfigMethodNotAllowed) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigMethodNotAllowed) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(405)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// UpdateClusterIgnitionConfigInternalServerErrorCode is the HTTP code returned for type UpdateClusterIgnitionConfigInternalServerError
+const UpdateClusterIgnitionConfigInternalServerErrorCode int = 500
+
+/*UpdateClusterIgnitionConfigInternalServerError Error.
+
+swagger:response updateClusterIgnitionConfigInternalServerError
+*/
+type UpdateClusterIgnitionConfigInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewUpdateClusterIgnitionConfigInternalServerError creates UpdateClusterIgnitionConfigInternalServerError with default headers values
+func NewUpdateClusterIgnitionConfigInternalServerError() *UpdateClusterIgnitionConfigInternalServerError {
+
+	return &UpdateClusterIgnitionConfigInternalServerError{}
+}
+
+// WithPayload adds the payload to the update cluster ignition config internal server error response
+func (o *UpdateClusterIgnitionConfigInternalServerError) WithPayload(payload *models.Error) *UpdateClusterIgnitionConfigInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the update cluster ignition config internal server error response
+func (o *UpdateClusterIgnitionConfigInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UpdateClusterIgnitionConfigInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
